common-applications/test-environment/majun-source-credible-consisitency/source-credible-consistency-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: source-credible-consistency-deployment
  namespace: majun-source-credible-consistency
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: source-credible-consistency
  template:
    metadata:
      labels:
        app: source-credible-consistency
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
      - env:
        - name: jasypt.encryptor.password
          valueFrom:
            secretKeyRef:
              key: jasypt.encryptor.password
              name: source-credible-consistency-secret
        - name: spring.data.mongodb.username
          valueFrom:
            secretKeyRef:
              key: spring.data.mongodb.username
              name: source-credible-consistency-secret
        - name: spring.data.mongodb.password
          valueFrom:
            secretKeyRef:
              key: spring.data.mongodb.password
              name: source-credible-consistency-secret
        - name: spring.data.mongodb.address
          valueFrom:
            secretKeyRef:
              key: spring.data.mongodb.address
              name: source-credible-consistency-secret
        - name: spring.data.mongodb.dbName
          valueFrom:
            secretKeyRef:
              key: spring.data.mongodb.dbname
              name: source-credible-consistency-secret
        - name: sourceclean.authentication.token
          valueFrom:
            secretKeyRef:
              key: sourceclean.authentication.token
              name: source-credible-consistency-secret
        - name: spring.security.user.name
          valueFrom:
            secretKeyRef:
              key: spring.security.user.name
              name: source-credible-consistency-secret
        - name: spring.security.user.password
          valueFrom:
            secretKeyRef:
              key: spring.security.user.password
              name: source-credible-consistency-secret
        - name: XARMOR_BACKEND_URL
          valueFrom:
            secretKeyRef:
              key: xarmor_backend_url
              name: source-credible-consistency-secret
        - name: XARMOR_APP_ID
          valueFrom:
            secretKeyRef:
              key: xarmor_app_id
              name: source-credible-consistency-secret
        - name: XARMOR_APP_TOKEN
          valueFrom:
            secretKeyRef:
              key: xarmor_app_token
              name: source-credible-consistency-secret
        - name: XARMOR_TENANT_ID
          valueFrom:
            secretKeyRef:
              key: xarmor_tenant_id
              name: source-credible-consistency-secret
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/majun/source-credible-consisitency-test:fd4043bb0c586667eec80ae4e349169a8a399a5b
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8089
          timeoutSeconds: 5
        name: source-credible-consistency
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8089
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 2000m
            memory: 4000Mi
          requests:
            cpu: 1000m
            memory: 2000Mi
        volumeMounts:
        - mountPath: /root/source_clean
          name: data-volume
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: source-clean-data-volume
